--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.1
   velocity_x: ^3.3.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
